--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     
     <!-- Titolo che appare nella tab del browser -->
-    <title>Test Bootstrap Offline</title>
+    <title>Talatta | Filettatura alici</title>
     
     <!-- COLLEGAMENTO AL CSS DI BOOTSTRAP (versione offline) -->
     <!-- Questo file contiene tutti gli stili predefiniti di Bootstrap -->
