--- a/index.html
+++ b/index.html
@@ -9,6 +9,11 @@
     <!-- Titolo che appare nella tab del browser -->
     <title>Talatta | Filettatura alici</title>
     
+    <!-- FAVICON - Icona che appare nella tab del browser -->
+    <!-- type="image/png": specifica il formato dell'immagine -->
+    <!-- href: percorso della favicon nella cartella assets -->
+    <link rel="icon" type="image/png" href="assets/favicon_talatta.png">
+    
     <!-- COLLEGAMENTO AL CSS DI BOOTSTRAP (versione offline) -->
     <!-- Questo file contiene tutti gli stili predefiniti di Bootstrap -->
     <link rel="stylesheet" href="css/bootstrap.min.css">
